integrate css-builder

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "style-tag": "0.0.1",
-    "wmap": "0.0.3"
+    "wmap": "0.0.3",
+    "css-builder": "0.0.2"
   }
 }
